# museum

./: ALGORITHMS.md  API.md  BENCHMARKS.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  README.md  bacon.toml  bench.sh  build.sh  log4rs.yaml
.github/workflows/: rust.yml
benches/: muse_benchmarks.rs
src/: algorithm.rs  cli.rs  completion.rs  config.rs  daemon.rs  db.rs  lib.rs  main.rs  mpd_client.rs  mpd_config.rs  path_translator.rs  playback.rs  queue.rs  song.rs
src/real/: command_handler.rs  mod.rs
tests/: integration_tests.rs
