[package]
name = "museum"
version = "0.6.0"
edition = "2021"

[dependencies]
# SQLite
rusqlite = { version = "0.31.0", features = ["bundled"] }
# Find data directory for SQLite DB.
etcetera = "0.8"
# Error handling with colors.
color-eyre = "0.6.3"
# Colored output.
owo-colors = "3"
# Commandline argument handler.
clap = { version = "4.5.3", features = ["derive"] }
