[package]
name = "muse"
version = "2.0.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Muse: Unleashing Music - Offline music suggestions & playlists"

[[bin]]
name = "muse"
path = "src/main.rs"

[lib]
name = "muse"
path = "src/lib.rs"

[dependencies]
# Core dependencies only
clap = { version = "4", features = ["derive", "env", "color"] }
clap_complete = "4.0"
rusqlite = { version = "0.32", features = ["bundled"] }
path-absolutize = "3.0"
dirs = "5.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
rayon = "1.8"
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }


[[bench]]
name = "muse_benchmarks"
harness = false

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true